<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Busan High School</string>
    <string name="title_home">Busan HS is</string>
    <string name="title_notifications">for Students</string>
    <string name="tv_home_title">Busan High School</string>
    <string name="tv_home_subtitle">A school that raises true students in harmony with the region</string>
    <string name="tv_home_description">We sincerely welcome you to visit the homepage of Busan High School that shines in history and tradition. Our school is a representative high school in Korea that has produced a total of 32,000 talented people over 72 times, starting with the first graduate in 1946. In addition, it is the birthplace of dreams where 500 students are developing the core competencies of the future society so that education can become a hope to dream of the future. With the active cooperation of students, parents, and faculty, so that the prestigious and prestigious Busan High School of the tradition can achieve a great luxury Busan High School through a bigger leap forward, and realize a\'classroom where dreams are raised with the joy of learning and the reward of teaching, a school where everyone is happy.\' We ask for your generous support.</string>
    <string name="title_dashboard">Briefly</string>
    <string name="tv_home_content_source">- from Busan HS website</string>
    <string name="tv_home_gongsi_title">School Disclosure Information</string>
    <string name="tv_home_gongsi_contents">Information is being loaded.</string>
    <string name="data_load_kr">Information is being loaded.</string>
    <string name="iv_school_junkyung">School view</string>
    <string name="scan_barcode_kr">After filling out the form, read the barcode on the back of your student ID card.</string>
    <string name="today1">Today Breakfast</string>
    <string name="today2">Today Lunch</string>
    <string name="today3">Today Dinner</string>
    <string name="tomorrow1">Tomorrow Breakfast</string>
    <string name="tomorrow2">Tomorrow Lunch</string>
    <string name="tomorrow3">Tomorrow Dinner</string>
    <string name="_1">1st late time is starts at</string>
    <string name="_2">2nd late time is starts at</string>
    <string name="_today">Today\'s school hours are as follows.</string>
    <string name="tv_dashboard_meal_title">Meal menu</string>
    <string name="_1_end">" "</string>
    <string name="_2_end">" "</string>
    <string name="tv_notifications_merit_title">Penalty score</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_bar_contribution">Contribution</string>
    <string name="action_bar_api">API</string>
    <string name="action_bar_haksa">e-haksa</string>
    <string name="api_url">https://khskeb0513.gitbook.io/busanhs-api/</string>
    <string name="contribution_url">https://khskeb0513.gitbook.io/busanhs-api/want-to-contribution</string>
    <string name="haksa_url">https://school.busanhs.xyz</string>
    <string name="barcode_scan_please">Scan barcode</string>
    <string name="input_name">Name</string>
    <string name="input_num">No</string>
    <string name="input_class">Class</string>
    <string name="warning_not_to_late">Be careful of being late.</string>
</resources>