<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fragment_content_margin">

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_title"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_home_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_subtitle"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <ImageView
                android:id="@+id/iv_school_junkyung"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:contentDescription="@string/iv_school_junkyung"
                android:src="@drawable/school_junkyung" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_home_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:text="@string/tv_home_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_home_content_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_content_source" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_home_gongsi_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_gongsi_title"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_home_gongsi_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:text="@string/tv_home_gongsi_contents"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>