<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_content_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dashboard_ontime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fragment_content_margin"
                    android:text="@string/_today"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/fragment_content_margin"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_dashboard_g1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/fragment_content_margin"
                        android:text="@string/_00_00"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_end"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/fragment_content_margin"
                        android:text="@string/_2"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_dashboard_g2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/fragment_content_margin"
                        android:text="@string/_00_00"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_end"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_content_margin"
                    android:text="@string/warning_not_to_late"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:id="@+id/tv_dashboard_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dashboard_meal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_dashboard_meal_title"
                    android:textColor="@color/black"
                    android:textSize="32sp" />

                <HorizontalScrollView
                    android:id="@+id/dashboard_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/today1"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_today1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/today2"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_today2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/today3"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_today3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/tomorrow1"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_tomorrow1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/tomorrow2"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_tomorrow2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/tomorrow3"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_dashboard_tomorrow3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@string/data_load_kr"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>