<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:id="@+id/notifications_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/tv_notifications_merit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_notifications_merit_title"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_notifications_merit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/scan_barcode_kr"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/notifications_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spn_notifications_grade"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fragment_content_margin"
                    android:entries="@array/grade_spinner" />

                <EditText
                    android:id="@+id/et_notifications_ban"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fragment_content_margin"
                    android:ems="10"
                    android:hint="@string/input_class"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/et_notifications_num"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fragment_content_margin"
                    android:ems="10"
                    android:hint="@string/imput_num"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_notifications_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_content_margin"
                android:ems="10"
                android:hint="@string/input_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_notifications_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:cropToPadding="true"
            android:elevation="4dp"
            android:src="@drawable/ic_baseline_qr_code_scanner_24"
            android:tint="#000000"
            android:contentDescription="@string/barcode_scan_please" />

    </LinearLayout>

</LinearLayout>